# stgriselda-clckwrks

./: .gitignore  shell.nix
clckwrks-plugin-stg/: clckwrks-plugin-stg.cabal  shell.nix
clckwrks-plugin-stg/Clckwrks/STG/: Monad.hs  Plugin.hs  URL.hs
clckwrks-theme-stg/: Makefile  Theme.hs  ThemeOld.hs  background.blend  clckwrks-theme-stg.cabal  clckwrks-theme.less  default.nix  shell.nix
clckwrks-theme-stg/data/css/: clckwrks-theme.css  clckwrks-theme.min.css
clckwrks-theme-stg/data/favicon/: manifest.json
clckwrks-theme-stg/data/imgs/: NLSM-loop.webm
stg-dot-com/: Main.hs  default.nix  shell.nix  stg-dot-com.cabal
