name:                clckwrks-theme-stg
version:             0.0.0
synopsis:            st. griselda theme
homepage:            http://www.stgriselda.com/
license:             BSD3
license-file:        LICENSE
author:              Jeremy Shaw
maintainer:          Jeremy Shaw <jeremy@n-heptane.com>
category:            Clckwrks
build-type:          Simple
cabal-version:       >=1.8

data-files:
  data/css/bootstrap-theme.css
  data/css/bootstrap-theme.css.map
  data/css/bootstrap-theme.min.css
  data/css/clckwrks-theme.css
  data/css/clckwrks-theme.min.css
  data/css/bootstrap.css
  data/css/bootstrap.css.map
  data/css/bootstrap.min.css
  data/fonts/glyphicons-halflings-regular.eot
  data/fonts/glyphicons-halflings-regular.svg
  data/fonts/glyphicons-halflings-regular.ttf
  data/fonts/glyphicons-halflings-regular.woff
  data/fonts/glyphicons-halflings-regular.woff2
  data/js/bootstrap.js
  data/js/bootstrap.min.js
  data/js/npm.js
  data/imgs/jumbotron.png
  data/imgs/stg---crossroads-back-alley-x.jpg

source-repository head
   type:     git
   subdir:   clckwrks-theme-stg
   location: https://github.com/st-griselda/stgriselda-clckwrks.git

library
  exposed-modules:     Theme
                       Paths_clckwrks_theme_stg
  build-depends:       base                   >= 4.5  && < 5,
                       clckwrks               >= 0.23 && < 0.24,
                       containers             >= 0.4  && < 0.6,
                       happstack-authenticate >= 2.0  && < 2.2,
                       hsp                    >= 0.9  && < 0.11,
                       hsx2hs                 >= 0.13 && < 0.14,
                       mtl                    >= 2.1  && < 2.3,
                       text                   >= 0.11 && < 1.3,
                       web-plugins            >= 0.2  && < 0.3
