name:                clckwrks-theme-stg
version:             0.0.4
synopsis:            st. griselda theme
homepage:            http://www.stgriselda.com/
license:             BSD3
license-file:        LICENSE
author:              Jeremy Shaw
maintainer:          Jeremy Shaw <jeremy@n-heptane.com>
category:            Clckwrks
build-type:          Simple
cabal-version:       >=1.8
data-files:
           data/css/bootstrap-theme.css
           data/css/bootstrap-theme.css.map
           data/css/bootstrap-theme.min.css
           data/css/clckwrks-theme.css
           data/css/clckwrks-theme.min.css
           data/css/bootstrap.css
           data/css/bootstrap.css.map
           data/css/bootstrap.min.css
           data/fonts/glyphicons-halflings-regular.eot
           data/fonts/glyphicons-halflings-regular.svg
           data/fonts/glyphicons-halflings-regular.ttf
           data/fonts/glyphicons-halflings-regular.woff
           data/fonts/glyphicons-halflings-regular.woff2
           data/js/bootstrap.js
           data/js/bootstrap.min.js
           data/js/npm.js
           data/imgs/background.jpg
           data/imgs/block_title_bg.png
           data/imgs/header.png
           data/imgs/header-full.png
           data/imgs/subheader_top_bg.png
           data/imgs/header-right.png
           data/imgs/hearthis.png
           data/imgs/instagram.png
           data/imgs/facebook.png
           data/imgs/footer-full.png
           data/imgs/stg---crossroads-back-alley-x.jpg
           data/imgs/alley-streak.jpg
           data/imgs/stg-patreon-banner.jpg
           data/imgs/TwitterLogo.png
           data/imgs/logo-header.png
           data/imgs/logo-header-black.png
           data/imgs/pattern_17.png
           data/imgs/patreon_logo.png
           data/favicon/android-chrome-144x144.png
           data/favicon/android-chrome-192x192.png
           data/favicon/android-chrome-36x36.png
           data/favicon/android-chrome-48x48.png
           data/favicon/android-chrome-72x72.png
           data/favicon/android-chrome-96x96.png
           data/favicon/apple-touch-icon-114x114.png
           data/favicon/apple-touch-icon-120x120.png
           data/favicon/apple-touch-icon-144x144.png
           data/favicon/apple-touch-icon-152x152.png
           data/favicon/apple-touch-icon-180x180.png
           data/favicon/apple-touch-icon-57x57.png
           data/favicon/apple-touch-icon-60x60.png
           data/favicon/apple-touch-icon-72x72.png
           data/favicon/apple-touch-icon-76x76.png
           data/favicon/apple-touch-icon-precomposed.png
           data/favicon/apple-touch-icon.png
           data/favicon/browserconfig.xml
           data/favicon/favicon-16x16.png
           data/favicon/favicon-32x32.png
           data/favicon/favicon-96x96.png
           data/favicon/favicon.ico
           data/favicon/manifest.json
           data/favicon/mstile-144x144.png
           data/favicon/mstile-150x150.png
           data/favicon/mstile-310x150.png
           data/favicon/mstile-310x310.png
           data/favicon/mstile-70x70.png
extra-source-files: clckwrks-theme.less

source-repository head
   type:     git
   subdir:   clckwrks-theme-stg
   location: https://github.com/st-griselda/stgriselda-clckwrks.git

library
  exposed-modules:     Theme
                       Paths_clckwrks_theme_stg
  build-depends:       base                   >= 4.5  && < 5,
                       clckwrks               >= 0.23 && < 0.29,
                       containers             >= 0.4  && < 0.7,
                       happstack-authenticate >= 2.0  && < 2.7,
                       hsp                    >= 0.9  && < 0.11,
                       hsx2hs                 >= 0.13 && < 0.15,
                       mtl                    >= 2.1  && < 2.4,
                       text                   >= 0.11 && < 2.1,
                       web-plugins            >= 0.2  && < 0.5
