name:                stg-dot-com
version:             0.1.0.0
synopsis:            st. griselda
homepage:            http://www.stgriselda.com/
license:             BSD3
license-file:        LICENSE
author:              Jeremy Shaw
maintainer:          Jeremy Shaw <jeremy@n-heptane.com>
category:            Clckwrks
build-type:          Simple
cabal-version:       >=1.8

source-repository head
    type:     git
    subdir:   stg-dot-com
    location: https://github.com/st-griselda/stgriselda-clckwrks

Executable             stg-dot-com-server
  main-is:             Main.hs
  ghc-options:         -threaded -O2 -with-rtsopts=-I0
  build-depends:       base                     > 4      && < 5,
                       clckwrks                 >= 0.23  && < 0.25,
                       clckwrks-theme-stg       == 0.0.*,
                       clckwrks-plugin-page     >= 0.3.0 && < 0.5,
                       clckwrks-plugin-mailinglist,
                       clckwrks-plugin-media,
                       containers               >= 0.4   && < 0.6,
                       happstack-server         >= 7.0   && < 7.6,
                       hsp                      >= 0.9   && < 0.11,
                       mtl                      >= 2.0   && < 2.3,
                       text                     >= 0.11  && < 1.3,
                       web-plugins                       ==   0.2.*

